{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 18,
  "lineage": "afe92b70-f113-813e-d721-8b91898dac44",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group/sg-0d21494791d72a5ea",
            "description": "created from terraform",
            "egress": [],
            "id": "sg-0d21494791d72a5ea",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "512978621590",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05fcd24c167ad4d5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sg-0d21494791d72a5ea",
            "region": "eu-west-3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group-rule/sgr-047aea64653bebcc5",
            "cidr_ipv4": "101.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-047aea64653bebcc5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0d21494791d72a5ea",
            "security_group_rule_id": "sgr-047aea64653bebcc5",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sgr-047aea64653bebcc5",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group-rule/sgr-0a2a0c1c9d0d4b531",
            "cidr_ipv4": "101.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-0a2a0c1c9d0d4b531",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0d21494791d72a5ea",
            "security_group_rule_id": "sgr-0a2a0c1c9d0d4b531",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sgr-0a2a0c1c9d0d4b531",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group-rule/sgr-0f2f1006302ca9e23",
            "cidr_ipv4": "101.20.30.50/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0f2f1006302ca9e23",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0d21494791d72a5ea",
            "security_group_rule_id": "sgr-0f2f1006302ca9e23",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sgr-0f2f1006302ca9e23",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}